samples/_failures_safe/1761377189_7da1a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21a7d0b2.c: In function ‘main’:
./samples/SAFE/__tmp_21a7d0b2.c:139:16: error: missing terminating " character
  139 |         printf("Line %d: %
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_21a7d0b2.c:139:9: error: expected expression at end of input
  139 |         printf("Line %d: %
      |         ^~~~~~
./samples/SAFE/__tmp_21a7d0b2.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21a7d0b2.c:139:9: error: expected declaration or statement at end of input
